Issue #552 navbar button styles on mobile

--- a/web/themes/custom/gpw/src/components/navbar/navbar.scss
+++ b/web/themes/custom/gpw/src/components/navbar/navbar.scss
@@ -27,9 +27,18 @@
     }
   }
 
+  > li > .btn {
+    display: inline-flex;
+    font-size: inherit;
+  }
+
+
   @media #{$grid-breakpoint-max} {
-    > li > a {
+    > li {
       text-align: right;
+      > .btn {
+        border: none;
+      }
     }
   }
 
@@ -40,8 +49,6 @@
       display: flex;
       align-items: center;
       > .btn {
-        padding: 0;
-        font-size: inherit;
         padding: .8em 2.5em;
       }
 
@@ -54,10 +61,8 @@
 .navbar-default {
   .navbar-nav {
     > li {
-      @media #{$grid-breakpoint} {
-        > .btn-outline {
-          color: $gpw-secondary;
-        }
+      > .btn-outline {
+        color: $gpw-secondary;
       }
 
       > a {
